--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -35,6 +35,7 @@
   }
   footer .social-icons {
     order: -1;
+    font-size: 4rem;
   }
 }
 /* Medium */
@@ -61,6 +62,9 @@
   }
   .desk-nav {
     display: flex;
+  }
+  footer .social-icons {
+    font-size: 5rem;
   }
 }
 /* Extra Large  */
