--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,8 +191,8 @@ body > * {
   color: #fff;
 }
 .menu {
-  position: absolute;
-  top: 90%;
+  position: fixed;
+  top: 200px;
   left: 0;
   right: 0;
   height: 0;
@@ -215,18 +215,23 @@ body > * {
   transition: 0.5s;
 }
 
-.main-card:hover .image-wrapper {
-  height: 120px;
+.main-card:hover .text-wrapper {
+  transform: translateY(-20%);
 }
 .main-card .image-wrapper {
-  height: 310px;
+  height: 250px;
   transition: 0.5s;
   overflow: hidden;
+  width: 100%;
+}
+.main-card:hover .card-info {
+  opacity: 1;
 }
 .main-card .text-wrapper {
   background: #fff;
   overflow: hidden;
-  transition: 0.3;
+  transition: 0.3s;
+  height: 200px;
 }
 .main-card a {
   border-bottom: 1px solid transparent;
@@ -241,6 +246,8 @@ body > * {
 }
 .main-card .card-info {
   font-size: 1.7rem;
+  opacity: 0;
+  transition: 0.3s;
 }
 
 /*Default Card -- End */
