--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ body > * {
   --gray: #f8f9fa;
   --lightgray: #e9ecef;
   --darkgray: #6c757d;
+  --white: #fff;
 }
 
 /* Colors -- End */
@@ -73,12 +74,17 @@ body > * {
 .secondary {
   color: var(--secondary);
 }
-
+.white {
+  color: var(--white);
+}
 .primary-bg {
   background-color: var(--primary);
 }
 .secondary-bg {
   background-color: var(--secondary);
+}
+.gray-sec-bg {
+  background-color: #f5f3f2;
 }
 .gray {
   color: var(--gray);
@@ -97,9 +103,20 @@ body > * {
 }
 .hover-cc {
   transition: 0.3s;
+  cursor: pointer;
 }
 .hover-cc:hover {
   color: var(--secondary);
+}
+.hover-cc-p {
+  transition: 0.3s;
+  cursor: pointer;
+}
+.hover-cc-p:hover {
+  color: var(--primary);
+}
+.pos-rel {
+  position: relative;
 }
 
 .h-60v {
@@ -121,7 +138,9 @@ body > * {
   font-weight: 500;
   margin-bottom: 20px;
 }
-
+.margin-sec {
+  margin: 50px 0;
+}
 .default-btn {
   background: transparent;
   border: none;
@@ -622,6 +641,189 @@ main #experience .hires-container .title {
 }
 /*Styling Main -- End */
 
+/* About Page Styling -- Start*/
+
+#breadcrumb-about {
+  background-image: url("../img/about-us/about-us-main.webp");
+
+  background-color: rgba(0, 0, 0, 0.219);
+  background-blend-mode: multiply;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 617px;
+  display: flex;
+  align-items: center;
+}
+.page-location {
+  position: absolute;
+  top: 50px;
+  max-width: 248px;
+  gap: 30px;
+  padding: 10px 15px;
+}
+.page-location p {
+  position: relative;
+}
+.page-location p::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  background-color: #fff;
+  top: 50%;
+  left: -15px;
+  transform: translateY(-50%);
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+}
+.breadcrumb--title {
+  line-height: 2.4rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+.breadcrumb--text {
+  font-size: 8rem;
+  font-weight: 600;
+  letter-spacing: 5px;
+}
+.breadcrumb--nav {
+  background-color: var(--primary);
+  justify-content: space-around;
+  align-items: center;
+  width: 700px;
+  padding: 17px;
+  position: absolute;
+  bottom: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.breadcrumb--nav a {
+  font-size: 1.8rem;
+  letter-spacing: 1px;
+}
+.breadcrumb--nav a:hover {
+  text-decoration: underline;
+}
+
+#main-info .main-title {
+  letter-spacing: 2px;
+  line-height: 5rem;
+}
+#main-info .text {
+  line-height: 3.2rem;
+}
+#personel {
+  overflow: hidden;
+}
+.personel-card {
+  background-image: url("../img/about-us/ceo-personel.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.319);
+  background-blend-mode: multiply;
+  max-height: 500px;
+  padding: 120px 64px 152px 88px;
+}
+.personel-card-title {
+  font-size: 1.4rem;
+  line-height: 1.7rem;
+  font-weight: 400;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+}
+.personel-card-info {
+  font-size: 3.2rem;
+  line-height: 3.8rem;
+  font-weight: 600;
+}
+.personel-card-sub {
+  letter-spacing: 2px;
+  font-size: 1.6rem;
+}
+
+.clients-wrapper {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(5, minmax(20px, 150px));
+  gap: 20px;
+  justify-content: center;
+}
+.client-image {
+  display: flex;
+  align-items: center;
+}
+
+.team-card {
+  margin: 20px 0;
+  padding: 20px;
+  background-color: #ffff;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right bottom;
+  min-height: 619px;
+  position: relative;
+  overflow: hidden;
+}
+.team-social {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: rgba(222, 1, 47, 0.7);
+  position: absolute;
+  bottom: -45px;
+  right: -30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  transform-origin: center;
+  transform: scale(0);
+  opacity: 0;
+  transition: 0.3s;
+}
+.team-card:hover .team-social {
+  transform: scale(1);
+  opacity: 1;
+}
+.team-social a:nth-child(1) {
+  transform: translateX(300px);
+  transition: 0.3s;
+  transition-delay: 0.1s;
+}
+.team-social a:nth-child(2) {
+  transform: translateX(300px);
+  transition: 0.3s;
+  transition-delay: 0.15s;
+}
+.team-social a:nth-child(3) {
+  transform: translateX(300px);
+  transition: 0.3s;
+  transition-delay: 0.2s;
+}
+.team-card:hover .team-social a:nth-child(1) {
+  transform: translateX(0);
+}
+.team-card:hover .team-social a:nth-child(2) {
+  transform: translateX(0);
+}
+.team-card:hover .team-social a:nth-child(3) {
+  transform: translateX(0);
+}
+.team-card:hover .team-card-text {
+  transform: translateX(0);
+}
+.team-card .team-card-title {
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 400;
+  letter-spacing: 0.2em;
+}
+.team-card .team-card-text {
+  transform: translateX(-300px);
+  transition: 0.3s;
+  font-size: 2.4rem;
+}
+/* About Page Styling -- End */
 /* Styling Footer -- Start  */
 
 footer {
