--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,14 +210,14 @@ body > * {
   color: #fff;
 }
 .menu {
-  position: fixed;
+  position: absolute;
   top: 200px;
   left: 0;
   right: 0;
   height: 0;
   overflow: hidden;
   transition: 0.2s;
-  z-index: 10;
+  z-index: 999999;
 }
 
 .pos-rel {
@@ -304,7 +304,6 @@ body > * {
 /*Styling Header -- Start */
 
 header {
-  overflow: hidden;
   padding: 20px 0;
   position: relative;
 }
