--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,15 @@ body > * {
 .fs-1 {
   font-size: 1rem;
 }
-
+.fs-1-5 {
+  font-size: 1.5rem;
+}
+.fs-1-7 {
+  font-size: 1.7rem;
+}
+.fs-1-9 {
+  font-size: 1.9rem;
+}
 .fs-2 {
   font-size: 2rem;
 }
@@ -50,7 +58,15 @@ body > * {
 .fw-700 {
   font-weight: 700;
 }
-
+.ls-2 {
+  letter-spacing: 2px;
+}
+.ls-3 {
+  letter-spacing: 3px;
+}
+.lh-30 {
+  line-height: 3rem;
+}
 /* Setting Default Font -- End */
 
 /* Colors -- Start */
@@ -83,6 +99,9 @@ body > * {
 .secondary-bg {
   background-color: var(--secondary);
 }
+.white-bg {
+  background-color: #fff;
+}
 .gray-sec-bg {
   background-color: #f5f3f2;
 }
@@ -101,6 +120,21 @@ body > * {
 .lightgray-bg {
   background-color: var(--lightgray);
 }
+.custom-before {
+  position: relative;
+}
+.custom-before::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -17px;
+  background-color: var(--primary);
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+}
 .hover-cc {
   transition: 0.3s;
   cursor: pointer;
@@ -115,6 +149,7 @@ body > * {
 .hover-cc-p:hover {
   color: var(--primary);
 }
+
 .pos-rel {
   position: relative;
 }
@@ -128,7 +163,16 @@ body > * {
 .px-50 {
   padding: 0 50px;
 }
-
+.ml-30 {
+  margin-left: 30px;
+}
+.left-active {
+  border-left: 2px solid var(--primary);
+  padding-left: 10px;
+}
+.pl-80 {
+  padding-left: 80px;
+}
 .text-end {
   text-align: end;
 }
@@ -228,9 +272,9 @@ body > * {
 .main-card {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  width: 370px;
   cursor: pointer;
-  height: 350px;
+  height: 410px;
   transition: 0.5s;
 }
 
@@ -271,7 +315,13 @@ body > * {
   opacity: 0;
   transition: 0.3s;
 }
-
+.main-card img {
+  width: 100%;
+}
+.article-card {
+  background-color: #fff;
+  padding: 20px 10px 55px 20px;
+}
 /*Default Card -- End */
 /* News Card Styling -- Start */
 .news-card {
@@ -767,7 +817,7 @@ main #experience .hires-container .title {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  background-color: rgba(222, 1, 47, 0.7);
+  background-color: rgba(222, 1, 47, 1);
   position: absolute;
   bottom: -45px;
   right: -30px;
@@ -779,6 +829,7 @@ main #experience .hires-container .title {
   transform: scale(0);
   opacity: 0;
   transition: 0.3s;
+  z-index: 3;
 }
 .team-card:hover .team-social {
   transform: scale(1);
@@ -818,9 +869,116 @@ main #experience .hires-container .title {
   letter-spacing: 0.2em;
 }
 .team-card .team-card-text {
-  transform: translateX(-300px);
   transition: 0.3s;
   font-size: 2.4rem;
+}
+
+.team-hover-info {
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  transform: translateX(-100%);
+  transition: 0.3s;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 50px;
+}
+.team-card:hover .team-hover-info {
+  transform: translateX(0);
+  opacity: 1;
+}
+#service-breadcrumb {
+  overflow: hidden;
+}
+.background {
+  background-image: url("../img/sub-sections/banner-breadcrumb.webp");
+  background-repeat: no-repeat;
+  background-size: 600px;
+  background-position: right;
+}
+.background-height {
+  padding: 50px 0;
+}
+#service-breadcrumb .service-title {
+  font-size: 4.8rem;
+  letter-spacing: 3px;
+  color: var(--primary);
+}
+#service-panel .nav-wrapper {
+  cursor: pointer;
+}
+#service-panel .nav-drop-menu {
+  height: 0;
+  overflow: hidden;
+  transition: 0.3s;
+}
+#service-panel .service-card-container {
+  margin-left: 10rem;
+}
+#service-panel .main-card {
+  background-image: url("../img/sub-sections/service-card-bg.png");
+  background-position: bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 393px;
+  background-color: #fff;
+  padding: 10px;
+  flex-basis: 55%;
+}
+#service-panel .side-card {
+  margin-left: auto;
+  height: 393px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 35%;
+  overflow: hidden;
+}
+#service-panel .side-card img {
+  width: 100%;
+}
+
+#service-panel .side-card .card-image {
+  height: 55%;
+}
+#service-panel .side-card .card-info {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#service-panel li {
+  list-style-type: disc;
+}
+.fa-long-arrow-alt-right {
+  transition: 0.3s;
+}
+.hover-right:hover .fa-long-arrow-alt-right {
+  transform: translateX(8px);
+}
+.key-services .key-services-item {
+  border: 1px solid var(--darkgray);
+  padding: 10px;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.key-services .key-services-item:hover {
+  background: var(--primary);
+  color: #fff;
+}
+
+.related-articles {
+  margin-top: 30rem;
+  padding-left: 30px;
 }
 /* About Page Styling -- End */
 /* Styling Footer -- Start  */
