--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,9 @@ body > * {
 .fs-3 {
   font-size: 3rem;
 }
+.fs-3-5 {
+  font-size: 3.5rem;
+}
 
 .fw-500 {
   font-weight: 500;
@@ -78,6 +81,7 @@ body > * {
   --lightgray: #e9ecef;
   --darkgray: #6c757d;
   --white: #fff;
+  --primarygreen: #00838f;
 }
 
 /* Colors -- End */
@@ -86,6 +90,9 @@ body > * {
 
 .primary {
   color: var(--primary);
+}
+.primarygreen-bg {
+  background-color: var(--primarygreen);
 }
 .secondary {
   color: var(--secondary);
@@ -119,6 +126,9 @@ body > * {
 }
 .lightgray-bg {
   background-color: var(--lightgray);
+}
+.white-bg {
+  background-color: #fff;
 }
 .custom-before {
   position: relative;
@@ -253,6 +263,10 @@ body > * {
 .btn-r:hover {
   color: #fff;
 }
+
+.btn-r-c:hover {
+  color: var(--secondary);
+}
 .menu {
   position: absolute;
   top: 200px;
@@ -268,11 +282,26 @@ body > * {
   position: relative;
 }
 
+.accardion-default {
+  overflow: hidden;
+}
+.accardion-default .accardion-default-title {
+  cursor: pointer;
+}
+.accardion-default .accardion-default-text {
+  height: 0;
+  overflow: hidden;
+  transition: 0.3s;
+}
+.accardion-default .accardion-default-icon-wrapper {
+  transition: 0.3s;
+}
+
 /*Default Card -- Start */
 .main-card {
   display: flex;
   flex-direction: column;
-  width: 370px;
+  width: 298px;
   cursor: pointer;
   height: 410px;
   transition: 0.5s;
@@ -396,12 +425,16 @@ header nav a {
 }
 
 header .menu .wrapper {
-  padding: 20px 0;
+  padding: 68px 80px 30px 0;
 }
 
 header .menu .wrapper a {
   margin-bottom: 15px;
   font-size: 1.7rem;
+}
+.menu-nav-left {
+  padding-right: 30px;
+  padding-top: 10px;
 }
 /*Styling Header -- End */
 
@@ -907,7 +940,7 @@ main #experience .hires-container .title {
 .background-height {
   padding: 50px 0;
 }
-#service-breadcrumb .service-title {
+.service-title {
   font-size: 4.8rem;
   letter-spacing: 3px;
   color: var(--primary);
@@ -937,6 +970,16 @@ main #experience .hires-container .title {
   margin-left: auto;
   height: 393px;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 35%;
+  overflow: hidden;
+}
+.side-card-social {
+  height: 200px;
+  margin-left: auto;
+  background-color: var(--secondary);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -975,10 +1018,92 @@ main #experience .hires-container .title {
   background: var(--primary);
   color: #fff;
 }
-
+#related {
+  padding: 60px;
+}
 .related-articles {
   margin-top: 30rem;
   padding-left: 30px;
+}
+#industry-breadcrumb {
+  background-image: url("../img/sub-sections/industries-breadcrumb.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 255, 255, 1);
+  background-blend-mode: multiply;
+  height: 200px;
+}
+.white-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.205);
+}
+#get-in-touch {
+  padding: 50px 0;
+}
+
+.insight-card-img {
+  height: 336px;
+}
+.insight-card-img img {
+  width: 100%;
+  height: 100%;
+}
+#careers {
+  padding: 60px;
+}
+.career-card {
+  position: relative;
+  min-height: 480px;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.career-card .map-text {
+  transform: translateY(-31px);
+}
+.career-card .career-card-text .map-link {
+  display: inline-block;
+  text-decoration: underline;
+}
+.career-button {
+  position: absolute;
+  bottom: 10px;
+  left: 30px;
+  color: #fff;
+  border: 2px solid var(--secondary);
+  z-index: 1;
+  background-color: #fff;
+}
+.career-card-text {
+  padding: 40px 0 0 20px;
+}
+.career-button:hover {
+  color: var(--secondary);
+}
+.career-button::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary);
+  z-index: -1;
+  transform-origin: right;
+  transform: scaleX(1);
+  transition: 0.3s;
+}
+.career-button:hover::after {
+  transform: scaleX(0);
 }
 /* About Page Styling -- End */
 /* Styling Footer -- Start  */
