--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,8 +75,8 @@ body > * {
 /* Colors -- Start */
 
 :root {
-  --primary: #4f2d7f;
-  --secondary: #de012f;
+  --primary: #1db954;
+  --secondary: #068e30;
   --gray: #f8f9fa;
   --lightgray: #e9ecef;
   --darkgray: #6c757d;
@@ -584,8 +584,8 @@ main #card-slider .swiper-custom-button-prev {
 }
 
 main #info-firm .firm-image {
-  background-image: url("../img/member-firm.webp");
-  background-color: rgb(214, 209, 209);
+  background-image: url("../img/FA-CONS-ROOM.jpg");
+  background-color: rgba(255, 255, 255, 0.75);
   background-blend-mode: multiply;
   background-position: center;
   background-size: cover;
@@ -596,18 +596,36 @@ main #info-firm .firm-image {
   align-items: center;
   color: #fff;
 }
+main #info-firm .firm-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.75);
+}
 main #info-firm .firm-image > p {
   font-size: 3.5rem;
   font-weight: 600;
+  z-index: 5;
+  color: var(--primary);
+}
+main #info-firm .firm-image .text-wrapper {
+  z-index: 5;
 }
 main #info-firm .firm-image .text-wrapper span {
   font-size: 2rem;
   letter-spacing: 5px;
+  z-index: 5;
+  color: var(--primary);
 }
 main #info-firm .firm-image .text-wrapper a {
   font-size: 5rem;
   display: block;
-  color: #fff;
+  z-index: 5;
+  color: var(--primary);
 }
 main #info-firm .firm-image .text-wrapper a:hover {
   text-decoration: underline;
@@ -623,7 +641,7 @@ main #info-firm .link-item {
   cursor: pointer;
 }
 main #info-firm .link-item:hover {
-  background: #452671;
+  background: var(--secondary);
 }
 main #info-firm .link-item .link-title {
   font-size: 1.5rem;
