--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ body > * {
 .news-card {
   display: flex;
   flex-direction: column;
-  padding: 30px;
+  padding: 30px 30px 30px 0;
 }
 .news-card .news-card--date {
   color: var(--darkgray);
@@ -399,7 +399,7 @@ header .mini-logo {
 }
 
 header .logo {
-  width: 546px;
+  width: 455px;
   height: 43px;
 }
 
