--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,11 +389,7 @@ body > * {
 
 header {
   padding: 20px 0;
-  /* position: relative; */
-  position: fixed;
-  width: 100%;
-  z-index: 999;
-  background-color: #fff;
+  position: relative;
 }
 
 header .top-header {
@@ -448,10 +444,6 @@ header .menu .wrapper a {
 /*Styling Header -- End */
 
 /*Styling Main -- Start */
-#breadcrumb-slider {
-  position: relative;
-  top: 210px;
-}
 
 main .main-slider {
   background-image: url("../img/main-slider-imgs/slider-img-0.jpg");
@@ -780,7 +772,7 @@ main #experience .hires-container .title {
 }
 .page-location {
   position: absolute;
-  top: 250px;
+  /* top: 250px; */
   max-width: 248px;
   gap: 30px;
   padding: 10px 15px;
@@ -805,13 +797,13 @@ main #experience .hires-container .title {
   letter-spacing: 5px;
   text-transform: uppercase;
   position: relative;
-  top: 200px;
+  /* top: 200px; */
 }
 .breadcrumb--text {
   font-size: 8rem;
   font-weight: 600;
   letter-spacing: 5px;
-  padding-top: 280px;
+  /* padding-top: 280px; */
 }
 .breadcrumb--nav {
   background-color: var(--primary);
