--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,6 +459,7 @@ header .menu .wrapper {
 header .menu .wrapper a {
   margin-bottom: 15px;
   font-size: 1.7rem;
+  text-align: right;
 }
 header .image-wrapper img {
   width: 130px;
