--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,7 +455,9 @@ header nav a {
 header .menu .wrapper {
   padding: 68px 80px 30px 0;
 }
-
+input[type="checkbox"] {
+  background-color: red;
+}
 header .menu .wrapper a {
   margin-bottom: 15px;
   font-size: 1.7rem;
@@ -1522,3 +1524,78 @@ footer .accardion .accardion-text a:hover {
 }
 
 /* Styling Footer -- End */
+
+/* create checkbox */
+
+label {
+  display: inline;
+}
+
+.regular-checkbox {
+  display: none;
+}
+
+.regular-checkbox + label {
+  background-color: #fafafa;
+  border: 1px solid #1db954;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+    inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 9px;
+  border-radius: 3px;
+  display: inline-block;
+  position: relative;
+}
+
+.regular-checkbox + label:active,
+.regular-checkbox:checked + label:active {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+    inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.regular-checkbox:checked + label {
+  background-color: #e9ecee;
+  border: 1px solid #adb8c0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+    inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05),
+    inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+  color: green;
+}
+
+.regular-checkbox:checked + label:after {
+  content: "\2714";
+  font-size: 2px;
+  position: absolute;
+  top: 0px;
+  left: 3px;
+  color: green;
+}
+
+.big-checkbox + label {
+  padding: 18px;
+}
+
+.big-checkbox:checked + label:after {
+  font-size: 28px;
+  left: 6px;
+}
+
+.tag {
+  font-family: Arial, sans-serif;
+  width: 200px;
+  position: relative;
+  top: 5px;
+  font-weight: normal;
+  font-size: 16px;
+  text-transform: uppercase;
+  display: block;
+  float: left;
+}
+
+.big-checkbox + label {
+  padding: 18px;
+}
+
+.big-checkbox:checked + label:after {
+  font-size: 28px;
+  left: 6px;
+}
