--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,8 @@
 /* Small */
 @media screen and (min-width: 200px) {
+  .burger-menu {
+    display: block;
+  }
   html {
     font-size: 9px;
   }
@@ -87,9 +90,6 @@
   footer .social-icons {
     order: 0;
   }
-  #service-panel .service-card-container {
-    margin-left: 10rem;
-  }
 }
 @media screen and (max-width: 768px) {
   .mobile {
@@ -104,13 +104,13 @@
   .ml-40 {
     margin-left: 40px !important;
   }
-  #service-panel .service-card-container {
-    margin-top: 40px;
-  }
 }
 
 /* Large */
 @media screen and (min-width: 992px) {
+  .burger-menu {
+    display: none;
+  }
   html {
     font-size: 9px;
   }
