--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1341,6 +1341,10 @@ main #experience .hires-container .title {
 .career-social li {
   list-style-type: none !important;
 }
+.career-social i {
+  color: #1db954;
+}
+
 .career-bg {
   background-color: #fff;
 }
