--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,6 +454,14 @@ header .burger-menu.activeMenu span:nth-child(2) {
   transform: translate(-50%, 0) rotate(315deg);
   width: 70%;
 }
+.search-input {
+  width: 100%;
+  border-color: #1db954;
+  outline: none;
+  padding: 5px;
+  /* border: none; */
+  background-color: #eaf0e887;
+}
 
 .mobile-menu {
   z-index: 9999;
