--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -168,6 +168,9 @@
   footer .social-icons {
     font-size: 5rem;
   }
+  main #info-firm .firm-image .text-wrapper {
+    right: 90px !important;
+  }
 }
 @media (max-width: 992px) {
   .hamburger {
@@ -183,6 +186,9 @@
   }
   .mobile-menu nav a {
     padding-top: 30px;
+  }
+  main #info-firm .firm-image .text-wrapper a {
+    font-size: 3rem;
   }
 }
 /* Extra Large  */
