--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -94,6 +94,10 @@
   footer .social-icons {
     order: 0;
   }
+
+  .f-direction-row {
+    flex-direction: row;
+  }
 }
 @media screen and (max-width: 768px) {
   .mobile {
@@ -132,6 +136,9 @@
   }
   #careers {
     padding: 0 !important;
+  }
+  .f-direction-column {
+    flex-direction: column;
   }
 }
 
